--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -10,38 +10,14 @@
 // -----------------------------------------------------------------*/
 
 .p-top-fixed {
-  position: relative;
   display: flex;
+  position: sticky;
   align-items: center;
+  top: 0;
   padding: 100px 0;
   font-family: 'Kosugi Maru', sans-serif;
-}
-
-//ファーストビュー: {position: fixed;} つけ外し
-.fixed {
-  &::before {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    content: '';
-    z-index: -2;
-  }
-
-  &::after {
-    display: block;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(to bottom, transparent 0%, transparent 50%, #fff 100%), url(#{$bgPath}many_people.jpg) no-repeat 30%/cover;
-    content: '';
-    z-index: -1;
-  }
-
+  transition-duration: 3s;
+  background: linear-gradient(to bottom, transparent 0%, transparent 50%, #fff 100%), url(#{$bgPath}many_people.jpg) no-repeat 30%/cover;
   @include mq('u-pc') {
     flex-direction: column;
     background-size: 100% 100%;
@@ -373,7 +349,6 @@
 .p-top-flowUpToWork {
   margin: 0 auto;
   padding: 20px 0 100px;
-
 }
 
 @mixin blueAndRedTitle {
@@ -1017,66 +992,14 @@
 // -----------------------------------------------------------------*/
 
 .p-top-entry {
+  @extend .p-top-aboutService__entry;
+
   margin: 0 auto;
-  position: relative;
-  overflow: hidden;
-
-  &:before {
-    content: '';
-    display: block;
-    width: 100vw;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: 1s;
-    background: url('#{$bgPath}sea_morudibu.jpg');
-    background-position: bottom;
-  }
-
-  &:hover {
-    &:before {
-      transform: scale(1.05);
-    }
-  }
+  padding: 0 30px 100px 30px;
 }
 
-.p-top-entry__mask {
-  width: 100%;
-  height: 100%;
-  padding: 200px 50px;
-  background: rgba(255,255,255,0.5);
-  position: relative;
+.p-top-entry__text { @extend .p-top-aboutService__entryBlock__text; }
 
-  @include mq('o-pc') {
-    clip-path: polygon(50% 0, 100% 50%, 50% 100%, 0 50%);
-  }
+.p-top-entry__text--line { @extend .p-top-aboutService__entryBlock__text--line; }
 
-  @include mq('u-pc') {
-    padding: 100px 20px;
-  }
-}
-
-.p-top-entry__text {
-  text-shadow: 1px 3px 3px #ffc042;
-  text-align: center;
-  font-size: 30px;
-  margin-bottom: 100px;
-}
-
-.p-top-entry__text--line {
-  color: $colorWhite;
-  text-shadow: 2px 2px 10px #777, -2px 2px 10px #777, 2px -2px 10px #777, -2px -2px 10px #777;
-  font-size: 100px;
-}
-
-.p-top-entry__btn {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-
-  @include mq('u-pc') {
-    width: 100%;
-  }
-}
+.p-top-entry__arrowBlock { overflow: hidden; }
