--- a/src/scss/object/component/_btn.scss
+++ b/src/scss/object/component/_btn.scss
@@ -6,15 +6,10 @@
   @include firstViewBtn(project);
 }
 
-.c-top-toLINE {
-  @include firstViewBtn(line);
-}
-
-.c-btn-square__toLINE {
+@mixin c-btn-toLINE {
   display: flex;
   align-items: center;
   padding: 1em 2em;
-  text-decoration: none;
   background: $colorWhite;
   box-shadow: 7px 7px 2px rgba(0, 0, 0, .7);
   border: solid 5px $colorGreen;
@@ -22,16 +17,13 @@
   font-weight: bold;
   overflow: hidden;
   font-size: 20px;
-  transform: skew(-10deg);
-  vertical-align: middle;
-  position: relative;
   font-family: 'Kosugi Maru', sans-serif;
+  position: relative; // ある時：ボタンの重なり×　ないとき：productionAnsweの位置×
 
   &:before {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
     content: '';
     width: 120%;
     height: 100%;
@@ -46,25 +38,48 @@
   }
 
   &:hover {
-    transform: skew(-10deg);
     color: $colorWhite;
 
     &:before {
       transform-origin: left top;
       transform: skewX(-30deg) scale(1, 1);
-    }
-
-    .c-btn-lineIcon {
-      color: $colorWhite;
+      z-index: -1; // これがないと文字隠れる
     }
   }
 }
 
-.c-btn-lineIcon {
+@mixin c-btn-lineIcon {
   width: 50px;
-  height: 50px;
   object-fit: contain;
   padding-right: 10px;
   color: $colorGreen;
+}
+
+.c-btn-skew__toLINE {
+  @include c-btn-toLINE;
+
+  transform: skew(-10deg);
+  position: relative;
+
+  &:hover {
+    transform: skew(-10deg);
+  }
+}
+
+.c-btn-skew__lineIcon {
+  @include c-btn-lineIcon;
+
   transform: skew(10deg);
+}
+
+.c-btn-square__toLINE {
+  @include c-btn-toLINE;
+
+  &:hover {
+    transform: skew(0deg); // これがないと緑の斜線流れない
+  }
+}
+
+.c-btn-square__lineIcon {
+  @include c-btn-lineIcon;
 }
