--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -928,6 +928,7 @@
   background: rgba(51, 51, 51, 0.8);
   width: 100%;
   height: 100%;
+  z-index: 2;
 }
 
 .nonScroll {
@@ -1015,25 +1016,19 @@
 // -----------------------------------------------------------------*/
 
 .p-top-entry {
-  @extend .p-top-aboutService__entry;
-
-  margin: 0 auto;
-  position: relative;
+  text-align: center;
   overflow: hidden;
+  background: url('#{$bgPath}bg_night.jpg');
+  background-position: center;
+  background-size: cover;
 
-  &:before {
-    content: '';
-    display: block;
-    width: 100vw;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: 1s;
-    background: url('#{$bgPath}bg_night.jpg');
-    background-position: center;
-    background-size: cover;
-  }
+  // &:before {
+  //   content: '';
+  //   width: 100vw;
+  //   height: 100%;
+  //   left: 0;
+  //   transition: 1s;
+  // }
 
   &:hover {
     &:before {
@@ -1043,11 +1038,8 @@
 }
 
 .p-top-entry__mask {
-  width: 100%;
-  height: 100%;
   padding: 100px 50px;
   background: rgba(255,255,255,0.6);
-  position: relative;
 
   @include mq('u-pc') {
     padding: 100px 20px;
@@ -1056,9 +1048,6 @@
 
 .p-top-entry__companyLogo {
   width: 20%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
   margin-bottom: 100px;
 
   @include mq('sp-pc') {
@@ -1072,7 +1061,6 @@
 
 .p-top-entry__text {
   text-shadow: 1px 3px 3px #ffc042;
-  text-align: center;
   font-size: 30px;
   margin-bottom: 100px;
 }
@@ -1087,9 +1075,3 @@
   display: inline-block;
   margin: 0 auto;
 }
-
-// .p-top-entry__text { @extend .p-top-aboutService__entryBlock__text; }
-
-// .p-top-entry__text--line { @extend .p-top-aboutService__entryBlock__text--line; }
-
-// .p-top-entry__arrowBlock { overflow: hidden; }
