--- a/src/scss/object/component/_btn.scss
+++ b/src/scss/object/component/_btn.scss
@@ -18,19 +18,18 @@
   overflow: hidden;
   font-size: 20px;
   font-family: 'Kosugi Maru', sans-serif;
-  position: relative; // ある時：ボタンの重なり×　ないとき：productionAnsweの位置×
 
   &:before {
     position: absolute;
     top: 0;
     left: 0;
     content: '';
-    width: 120%;
-    height: 100%;
+    width: 100vw; // ☆
+    height: 100vh; // ☆
     background: $colorGreen;
     transform-origin: right top;
     transform: skewX(-30deg) scale(0, 1);
-    transition: transform .3s;
+    transition: transform .5s;
   }
 
   @include mq('u-sp') {
@@ -43,7 +42,7 @@
     &:before {
       transform-origin: left top;
       transform: skewX(-30deg) scale(1, 1);
-      z-index: -1; // これがないと文字隠れる
+      z-index: -1; // 文字見えるように
     }
   }
 }
@@ -76,7 +75,7 @@
   @include c-btn-toLINE;
 
   &:hover {
-    transform: skew(0deg); // これがないと緑の斜線流れない
+    transform: skew(0deg); // 緑の斜線流すため
   }
 }
 
