--- a/src/scss/object/component/_btn.scss
+++ b/src/scss/object/component/_btn.scss
@@ -46,6 +46,7 @@
   overflow: hidden;
   font-size: 20px;
   font-family: 'Kosugi Maru', sans-serif;
+  white-space: nowrap;
 
   &:before {
     position: absolute;
@@ -62,6 +63,7 @@
 
   @include mq('u-sp') {
     font-size: 15px;
+    padding: 1em;
   }
 
   &:hover {
