--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -693,6 +693,7 @@
 
 .p-top-project__listItem__feature__income__price {
   letter-spacing: 3px;
+  white-space: nowrap;
 
   @include mq('u-smSp') {
     font-size: 13px;
@@ -726,6 +727,7 @@
 
 .p-top-project__listItem__feature__working__day {
   letter-spacing: 3px;
+  white-space: nowrap;
 
   @include mq('u-smSp') {
     font-size: 13px;
@@ -1067,7 +1069,20 @@
   text-shadow: 2px 2px 10px #777, -2px 2px 10px #777, 2px -2px 10px #777, -2px -2px 10px #777;
 }
 
-.p-top-entry__btn {
+.p-top-PCentry__btn {
   display: inline-block;
   margin: 0 auto;
+
+  @include mq('u-sp') {
+    display: none;
+  }
+}
+
+.p-top-SPentry__btn {
+  display: inline-block;
+  margin: 0 auto;
+
+  @include mq('o-sp') {
+    display: none;
+  }
 }
