modified the behavior of firstview and changed flex column pieList

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -5,7 +5,7 @@ src/ejs/template/_head %>
 <% include src/ejs/template/_header %>
 
 <main class="l-main">
-    <div class="p-top-fixed" id="fixed">
+    <div class="p-top-fixed fixed" id="fixed">
       <div class="p-top-fixed__container" id="fluffy_disappear">
         <div class="p-top-fixed__circle--LINE">
           <h3 class="p-top-fixed__catchPhrase"><span class="p-top-fixed__catchPhrase--bold">LINE</span>で<br>簡単登録</h3>
