--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -21,7 +21,10 @@
     background-position: bottom;
     padding-top: 10px;
   }
+}
 
+.fixed {
+  position: relative;
   &::before {
     display: block;
     position: fixed;
@@ -33,6 +36,10 @@
     content: '';
     z-index: -1;
   }
+}
+
+.bgColor {
+  background-color: $colorWhite;
 }
 
 .p-top-fixed__container {
@@ -531,25 +538,13 @@
   margin: 0 auto;
 
   @include mq('u-sp') {
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
     margin-bottom: 20px;
   }
 }
 
 .p-top-project__pieItem {
   margin-bottom: 100px;
-
-  @include mq('u-sp') {
-    width: 50%;
-  }
-
-  // ピラミッド型にするため1つ目の要素をほんの少し大きく
-  &:first-child {
-    @include mq('u-sp') {
-      width: 51%;
-    }
-  }
 }
 
 .p-top-project__pieItem__category {
