--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -554,6 +554,7 @@
   opacity: 0.6;
 
   @include mq('u-sp') {
+    margin-bottom: -80px;
     font-size: 30px;
   }
 }
@@ -586,13 +587,12 @@
 
   width: 100vw;
   height: auto;
-  padding-bottom: 100px;
   margin: 0 auto;
-  overflow: hidden;
+  overflow: hidden; // グラフ画像のはみ出し防ぐ
 }
 
 .p-top-project__SPpieItem__image > img {
-  transform: scale(1.8);
+  transform: scale(1.4);
 }
 
 /*// -----------------------------------------------------------------
@@ -610,7 +610,6 @@
 .p-top-project__heading {
   @include blueAndRedTitle;
 
-
   &::before {
     left: 0;
     background-color: $colorLightBlue;
@@ -619,6 +618,10 @@
   &::after {
     right: 0;
     background-color: $colorLightRed;
+  }
+
+  @include mq('u-sp') {
+    margin-bottom: 100px;
   }
 }
 
