the layout of firstview is equilateral triangle and the modified font-family and font-weight, decolation of pieLabels

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -6,7 +6,7 @@ src/ejs/template/_head %>
 
 <main class="l-main">
     <div class="p-top-fixed fixed" id="fixed">
-      <div class="p-top-fixed__container" id="fluffy_disappear">
+      <div class="p-top-fixed__container" id="fluffyDisappear">
         <div class="p-top-fixed__circle--LINE">
           <h3 class="p-top-fixed__catchPhrase"><span class="p-top-fixed__catchPhrase--bold">LINE</span>で<br>簡単登録</h3>
         </div><!-- /.p-top-fixed__circle -->
