--- a/src/scss/object/project/_home.scss
+++ b/src/scss/object/project/_home.scss
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   top: 0;
-  padding: 100px 0;
+  padding: 30px 0 100px;
   font-family: 'Kosugi Maru', sans-serif;
   @include mq('u-pc') {
     flex-direction: column;
@@ -111,9 +111,10 @@
 .p-top-fixed__horizontal {
   display: flex;
   justify-content: space-around;
-  width: 100%;
+  width: 80%;
 
   @include mq('u-sp') {
+    width: 100%;
     justify-content: center;
     margin-bottom: 20px;
   }
@@ -407,6 +408,7 @@
 
 .p-top-flowUpToWork__heading {
   display: inline-block;
+  margin: 0 auto;
   font-size: 35px;
 
   @include blueAndRedTitle;
@@ -548,10 +550,30 @@
 }
 
 .p-top-project__pieItem__category {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 25px;
+  font-weight: bold;
+  color: rgba($colorGray, 0.9);
   letter-spacing: 5px;
-  opacity: 0.6;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+  &::before, &::after {
+    display: block;
+    width: 50px;
+    height: 3px;
+    background-color: #e3bf00;
+    content: '';
+  }
+
+  &::before {
+    transform: rotate(60deg);
+  }
+
+  &::after {
+    transform: rotate(-60deg);
+  }
 
   @include mq('u-sp') {
     margin-bottom: -80px;
@@ -671,7 +693,7 @@
   // justify-content: center;
   height: 120px;
   margin-bottom: 15px;
-  padding: 40px;
+  padding: 30px;
   font-size: 17px;
   font-weight: bold;
   letter-spacing: 3px;
